# smallest_tcp

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  tcpip-stack-plan.md
.github/workflows/: ci.yml  fuzz.yml
bench/: build_lwip.sh  cortex-m0.ld  size_measure.c
bench/lwip/: lwipopts.h
bench/lwip/arch/: cc.h
demo/: CMakeLists.txt
demo/echo_server/: main.c
demo/frame_dump/: main.c
demo/tcp_echo/: main.c
docs/: architecture.md  test-plan.md
docs/design/: arp-resolution.md  byte-order.md  checksum.md  configuration.md  mac-hal.md  memory-model.md  size-comparison.md  tcp-buffer.md  timer-model.md
docs/requirements/: arp.md  checksum.md  dhcpv4.md  dhcpv6.md  dns.md  ethernet.md  http.md  icmpv4.md  icmpv6.md  ipv4.md  ipv6.md  ndp.md  slaac.md  tcp.md  tftp.md  udp.md
examples/fetchcontent/: CMakeLists.txt  main.c
include/: arp.h  eth.h  icmp.h  ipv4.h  net.h  net_cksum.h  net_config.h  net_endian.h  net_mac.h  tcp.h  tcp_buf.h  udp.h
include/driver/: bpf.h  stub.h  tap.h
src/: arp.c  eth.c  icmp.c  ipv4.c  net.c  net_cksum.c  tcp.c  tcp_buf_saw.c  udp.c
src/driver/: bpf.c  stub.c  tap.c
tests/: CMakeLists.txt
tests/blackbox/: conftest.py  helpers.py  test_tcp_conform.py  test_tcp_fuzz.py
tests/unit/: test_arp.c  test_checksum.c  test_endian.c  test_eth.c  test_icmp.c  test_ipv4.c  test_main.h  test_net.c  test_tcp.c  test_tcp_buf.c  test_udp.c
